deploy: 4b9c18d2d65d515233bc3f8d033b4e5aa2bff211

--- a/dataset/wsnm/index.Rmd
+++ b/dataset/wsnm/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: Infants’ Word Segmentation tested with Brain Measures
+title: Word segmentation (neuro)
 layout: data
 type: dataset
 tags: 
